# biocompare

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish-pypi.yml
biocompare/: cli.py
biocompare/comparators/: __init__.py  expression.py
biocompare/io/: report_writers.py
docs/: api.md  design.md  index.md  quickstart.md  writing_comparators.md
docs/tutorials/: compare_peak_callers.md  compare_rnaseq_pipelines.md  compare_variant_callers.md  regression_testing.md
paper/: paper.bib  paper.md
pipeconcord/: __init__.py  __main__.py  cli.py
pipeconcord/comparators/: __init__.py  bam_stats.py  base.py  bed.py  counts.py  deg.py  expression.py  fasta.py  table.py  vcf.py
pipeconcord/core/: __init__.py  batch.py  engine.py  registry.py
pipeconcord/detection/: __init__.py  dispatch.py
pipeconcord/io/: __init__.py  report_writers.py
tests/: test_bam_stats_comparator.py  test_batch.py  test_bed_comparator.py  test_cli.py  test_counts_comparator.py  test_deg_comparator.py  test_engine_integration.py  test_expression_comparator.py  test_fasta_comparator.py  test_filetype.py  test_report_writers.py  test_table_comparator.py  test_vcf_comparator.py
tests/fixtures/: expression_tpm_a.tsv  expression_tpm_b.tsv
