[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeconcord"
version = "0.2.0"
description = "Format-aware concordance reports for bioinformatics pipeline outputs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "PipeConcord contributors" }
]
keywords = ["bioinformatics", "testing", "concordance", "pipeline", "comparison"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.0",
  "mkdocs>=1.6",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://qchiujunhao.github.io/pipeconcord/"
Repository = "https://github.com/qchiujunhao/pipeconcord"
Issues = "https://github.com/qchiujunhao/pipeconcord/issues"
Documentation = "https://qchiujunhao.github.io/pipeconcord/"

[project.scripts]
pipeconcord = "pipeconcord.cli:main"

[project.entry-points."pipeconcord.comparators"]
bam_stats = "pipeconcord.comparators.bam_stats:BAMStatsComparator"
bed = "pipeconcord.comparators.bed:BEDComparator"
counts = "pipeconcord.comparators.counts:CountsComparator"
deg = "pipeconcord.comparators.deg:DEGComparator"
expression = "pipeconcord.comparators.expression:ExpressionComparator"
fasta = "pipeconcord.comparators.fasta:FASTAComparator"
table = "pipeconcord.comparators.table:TableComparator"
vcf = "pipeconcord.comparators.vcf:VCFComparator"

[tool.setuptools.packages.find]
include = ["pipeconcord*"]

[tool.coverage.run]
branch = true
source = ["pipeconcord"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
